--- a/src/containers/Calendar/Sidebar.css
+++ b/src/containers/Calendar/Sidebar.css
@@ -8,9 +8,9 @@
   --hover-icon-color: var(--primary-text-color);
   --icon-color: var(--yankees-blue-color);
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding-top:19px;
+  flex-direction: column;
+  align-items: center;
+  padding-top:14px;
 }
 
 .show-hide-panel-button {
@@ -18,6 +18,58 @@
   color: var(--icon-color);
 }
 
-.show-hide-panel-button i:hover, .show-hide-panel-button i:active {
+.show-hide-panel-button i:active {
+  color: var(--hover-icon-color);
+}
+
+.show-hide-panel-button i:hover {
+  cursor: pointer;
+}
+
+.top-menu-buttons {
+  list-style:none;
+  margin:0;
+  padding:0;
+  font-size: 27px;
+  padding-top:30px;
+}
+
+.top-menu-buttons li {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.top-menu-buttons li:hover {
+  cursor: pointer;
+}
+
+.top-menu-buttons li:active {
+  color: var(--hover-icon-color);
+}
+
+.main-sidebar-menu-item-active {
+  color: var(--hover-icon-color);
+}
+
+.bottom-menu-buttons {
+  position:absolute;
+  bottom:0;
+  list-style:none;
+  margin:0;
+  padding:0;
+  font-size: 27px;
+  padding-top:30px;
+}
+
+.bottom-menu-buttons li {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.bottom-menu-buttons li:hover {
+  cursor: pointer;
+}
+
+.bottom-menu-buttons li:active {
   color: var(--hover-icon-color);
 }
