--- a/src/containers/Calendar/index.css
+++ b/src/containers/Calendar/index.css
@@ -1,4 +1,5 @@
 .calendar-container {
-  width:100vw;
-  height:100vh;
+  display:grid;
+  grid-template-columns: 50px 345px auto;
+  grid-template-rows: 100vh;
 }
