--- a/src/containers/Calendar/Calendar/Panel/PanelCalendar.css
+++ b/src/containers/Calendar/Calendar/Panel/PanelCalendar.css
@@ -48,7 +48,7 @@
   font-family: 'Roboto', sans-serif;
   font-size: 21px;
   color: var(--primary-text-color);
-  margin:0;
+  margin:0 0 0 13px;
   padding:0;
 }
 
