--- a/src/containers/Calendar/Sidebar.css
+++ b/src/containers/Calendar/Sidebar.css
@@ -1,7 +1,9 @@
 .main-sidebar {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  background-color: var(--selective-yellow);
+  background: #ffb908;
+  background: linear-gradient(to bottom, #ffb908 0%, #d49900 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb908', endColorstr='#d49900', GradientType=0 );
 }
 
 .main-sidebar-nav {
@@ -10,11 +12,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top:14px;
+  padding-top: 14px;
 }
 
 .show-hide-panel-button {
-  font-size:27px;
+  font-size: 27px;
   color: var(--icon-color);
 }
 
@@ -27,11 +29,11 @@
 }
 
 .top-menu-buttons {
-  list-style:none;
-  margin:0;
-  padding:0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   font-size: 27px;
-  padding-top:30px;
+  padding-top: 30px;
 }
 
 .top-menu-buttons li {
@@ -53,13 +55,13 @@
 }
 
 .bottom-menu-buttons {
-  position:absolute;
-  bottom:0;
-  list-style:none;
-  margin:0;
-  padding:0;
+  position: absolute;
+  bottom: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   font-size: 27px;
-  padding-top:30px;
+  padding-top: 30px;
 }
 
 .bottom-menu-buttons li {
