--- a/src/containers/Login/index.css
+++ b/src/containers/Login/index.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: flex-end;
   height: 48px;
-  background-color: #f7f7f7;
+  background-color: rgb(247, 247, 247, 0.6);
 }
 
 .main-nav {
@@ -50,10 +50,8 @@
 
 .sign-in-form {
   flex:1;
-}
-
-.app-icon {
-  
+  display:flex;
+  flex-direction: column;
 }
 
 .app-title {
@@ -71,4 +69,71 @@
   padding:0;
   font-weight: 300;
   color:#686767;
+}
+
+.sign-in-title {
+  font-family: 'Roboto', sans-serif;
+  font-size:35px;
+  margin:34px 0 45px 0;
+  padding:0;
+  color:#414141;
+}
+
+.button-submit {
+  display:block;
+  background-image: linear-gradient(to bottom, #ffc42c, #ffc225, #ffbf1e, #ffbd15, #ffba08);  
+  border:none;
+  color: #fff;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  border-radius:15px;
+  width:100%;
+  padding:12px;
+  margin:55px 0 0 0;
+  outline: none;
+}
+
+.button-submit:active {
+  background: #dfa209;
+}
+
+.form-label {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:20px;
+  display:block;
+  margin:9px 0 9px 14px;
+  padding:0;
+  font-weight: 300;
+  color:#686767;
+}
+
+.form-input {
+  display:block;
+  border:1px solid #dadada;
+  border-radius:15px;
+  width:100%;
+  height: 30px;
+  outline: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size:16px;
+  padding:6px;
+}
+
+.button-outline {
+  display:block;
+  border:none;
+  color: #414141;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  border-radius:15px;
+  border:1px solid var(--selective-yellow);
+  background-color:#fff;
+  width:100%;
+  padding:12px;
+  margin:10px 0 0 0;
 }
