--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -38,7 +38,7 @@
 }
 
 .modal .modal-close:hover {
-  color: #3498db;
+  color: #5e5e5e;
 }
 
 .modal header {
@@ -50,7 +50,9 @@
 .modal header h2 {
   margin: 0 0 10px;
   padding: 0;
-  font-size: 28px;
+  font-size: 34px;
+  color: #414141;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .modal article {
@@ -60,6 +62,8 @@
   padding: 0;
   font-size: 16px;
   line-height: 1.75;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 
 .modal footer {
@@ -69,5 +73,9 @@
   justify-content: flex-end;
   width: 100%;
   margin: 0;
-  padding: 10px 0 0;
+  padding: 40px 0 0;
+}
+
+.modal footer .button {
+  margin: 0 0 0 10px;
 }
