--- a/src/containers/Login/index.css
+++ b/src/containers/Login/index.css
@@ -137,3 +137,28 @@
   padding: 12px;
   margin: 10px 0 0 0;
 }
+
+.form-label-signup {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 20px;
+  display: inline-block;
+  padding: 7px 0;
+  font-weight: 300;
+  color: #686767;
+  line-height: 40px;
+  width: 20%;
+}
+
+.form-input-signup {
+  display: inline-block;
+  border: 1px solid #dadada;
+  box-sizing: border-box;
+  border-radius: 15px;
+  height: 40px;
+  width: 80%;
+  outline: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  padding: 6px;
+}
