--- a/src/containers/Calendar/Calendar/Panel/index.css
+++ b/src/containers/Calendar/Calendar/Panel/index.css
@@ -1,9 +1,8 @@
 .panel-container {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  background: #1c3144;
-  background: linear-gradient(to bottom, #1c3144 0%, #32597a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c3144', endColorstr='#32597a', GradientType=0 );
+  background: var(--panel-background);
+  filter: var(--panel-filter);
   padding: 10px;
   height: calc(100vh - 20px);
 }
