--- a/src/containers/Calendar/Sidebar.css
+++ b/src/containers/Calendar/Sidebar.css
@@ -1,14 +1,16 @@
 .main-sidebar {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  background: #ffb908;
+  /* background: #ffb908;
   background: linear-gradient(to bottom, #ffb908 0%, #d49900 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb908', endColorstr='#d49900', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb908', endColorstr='#d49900', GradientType=0); */
+  background: var(--sidebar-background);
+  filter: var(--sidebar-filter);
 }
 
 .main-sidebar-nav {
-  --hover-icon-color: var(--primary-text-color);
-  --icon-color: var(--yankees-blue-color);
+  --icon-color: var(--sidebar-icon-color);
+  --active-icon-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,7 +23,7 @@
 }
 
 .show-hide-panel-button i:active {
-  color: #fffcf3;
+  color: var(--active-icon-color);
 }
 
 .show-hide-panel-button i:hover {
@@ -47,11 +49,11 @@
 }
 
 .top-menu-buttons li:active {
-  color: #fffcf3
+  color: var(--active-icon-color);
 }
 
 .main-sidebar-menu-item-active i {
-  color: #fff1cc;
+  color: var(--active-icon-color);
 }
 
 .bottom-menu-buttons {
@@ -75,5 +77,5 @@
 }
 
 .bottom-menu-buttons li:active {
-  color: #fffcf3;
+  color: var(--active-icon-color);
 }
