--- a/src/containers/Calendar/Calendar/CalendarGrid.css
+++ b/src/containers/Calendar/Calendar/CalendarGrid.css
@@ -1,6 +1,79 @@
-.week-calendar-day-name {
-  color: var(--wild-blue-yonder-color);
+.calendar-week-grid {
+  overflow: hidden;
+  width: 1038px;
+  cursor: default;
+}
+
+.calendar-week-hours-column {
+  box-sizing: border-box;
+  float: left;
+}
+
+.calendar-week-day {
+  height: 108px;
+  width: 136px;
+  position: relative;
+  border-right: 1px solid rgb(162, 174, 187, 0.4);
+  display: block;
+}
+
+.calendar-week-day-name {
+  font-size: 19px;
   font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 1.2rem;
+  color: var(--wild-blue-yonder-color);
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 12px;
+  top: 12px;
+}
+
+.calendar-week-day-num {
+  font-size: 32px;
+  font-family: 'Roboto';
+  font-weight: bold;
+  position: absolute;
+  bottom: 12px;
+  left: 12px;
+  margin: 0;
+  padding: 0;
+}
+
+.calendar-week-day-column {
+  box-sizing: border-box;
+  float: left;
+}
+
+.calendar-week-block {
+  height: 65px;
+  width: 136px;
+  border-top: 1px solid rgb(162, 174, 187, 0.4);
+  border-right: 1px solid rgb(162, 174, 187, 0.4);
+  display: block;
+}
+
+.calendar-week-day-column:last-child .calendar-week-block, .calendar-week-day-column:last-child .calendar-week-day {
+  border-right: 0;
+}
+
+.calendar-week-empty-ceil {
+  width: 78px;
+  height: 108px;
+  border-right: 1px solid rgb(162, 174, 187, 0.4);
+}
+
+.calendar-week-hour {
+  width: 78px;
+  line-height: 64px;
+  text-align: center;
+  border-top: 1px solid rgb(162, 174, 187, 0.4);
+  border-right: 1px solid rgb(162, 174, 187, 0.4);
+}
+
+.calendar-week-hour span {
+  font-size: 19px;
+  font-family: 'Roboto';
+  color: var(--wild-blue-yonder-color);
+  margin: 0;
+  padding: 0;
 }
