--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "~normalize.css/normalize.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:300,400,500,700');
+@import "./styles/fonts.css";
 
 :root {
   /* Global colors */
