--- a/src/containers/Calendar/Calendar/Panel/PanelRemindersEvents.css
+++ b/src/containers/Calendar/Calendar/Panel/PanelRemindersEvents.css
@@ -14,6 +14,26 @@
   border-top: 0.5px solid rgba(162, 174, 187, 0.3);
   line-height: 43px;
   margin:10px;
+  position: relative;
+  overflow: hidden;
+  padding: 0 5px;
+}
+
+.reminders-list-item::before {
+  --size: 0;
+    content: '';
+    position: absolute;
+    left: var(--x);
+    top: var(--y);
+    width: var(--size);
+    height: var(--size);
+    background: radial-gradient(circle closest-side, rgba(73, 127, 173, 0.5), transparent);
+    transform: translate(-50%, -50%);
+    transition: width .2s ease, height .2s ease;
+}
+
+.reminders-list-item:hover::before {
+  --size: 250px;
 }
 
 .reminders-list-item-datetime {
@@ -22,6 +42,7 @@
   font-size: 19px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  cursor: default;
 }
 
 .reminders-list-item-name {
@@ -29,6 +50,7 @@
   color: var(--primary-text-color);
   font-size: 21px;
   font-family: 'Roboto', sans-serif;
+  cursor: default;
 }
 
 .reminders-list-item-delete-icon {
